--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -3,10 +3,21 @@ appTitle=Employees
 appDescription=Employees
 
 #Labels
-labelEmployee=Employee
+labelEmployee=Employee Id
 labelCountry=Country
 
 # Country Keys
 countryUS=United States
 countryUK=United Kindom
 countryES=Spain
+countryPT=Potugal
+
+#Table Labels
+tableId=Employee Id
+tableName=Name
+tableCountry=Country
+tableCity=City
+
+#Labels Buttons
+btnFilter=Filter
+btnClearFilter=Clear Filter
