--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -23,3 +23,8 @@ btnFilter=Filter
 btnClearFilter=Clear Filter
 showCity=Show City
 hideCity=Hide City
+
+#Table Orders
+orderID=Order ID
+freight=Freight
+shipAddress=Ship Address
